--- a/TobotApp/src/main/AndroidManifest.xml
+++ b/TobotApp/src/main/AndroidManifest.xml
@@ -31,8 +31,10 @@
     <application
         android:name=".base.BaseApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
