--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 25 15:49:32 CST 2020
-sdk.dir=D\:\\androidstudiosdk\\Sdk
+#Tue Sep 08 17:46:53 CST 2020
+sdk.dir=D\:\\androidstudiosdk
