--- a/TobotApp/build.gradle
+++ b/TobotApp/build.gradle
@@ -9,13 +9,14 @@ android {
         applicationId "com.tobot.map"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 80
-        versionName "4.0.1"
+        versionCode 83
+        versionName "4.0.5"
         // dex突破65535的限制
         multiDexEnabled true
         // 自定义配置信息
         buildConfigField("String", "BASE_URL", "${BASE_URL}")
         buildConfigField("String", "VERSION_TXT_URL", "${VERSION_TXT_URL}")
+        buildConfigField("String", "FILE_DOWNLOAD_BASE_URL", "${FILE_DOWNLOAD_BASE_URL}")
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         ndk {
@@ -87,5 +88,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation files('libs/TobotNet-1.2.4.jar')
-    implementation files('libs/TobotSlam-2.12.0.jar')
+    implementation files('libs/TobotSlam-2.12.2.jar')
 }
