--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 BASE_URL="http://www.tobotai.com/"
 VERSION_TXT_URL="http://"
+FILE_DOWNLOAD_BASE_URL="http://file.tobotai.com/"
